--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "image_quantiser"
+name = "pxl"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 anyhow = "1.0.95"
+dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
 image = "0.25.5"
 
 [profile.release]
