--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.95"
 dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
+egui = "0.30.0"
 image = "0.25.5"
 indicatif = "0.17.9"
 
