--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,12 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.95"
 dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
+eframe = "0.30.0"
 egui = "0.30.0"
-image = "0.25.5"
+egui_extras = { version = "0.30.0", features = ["image"] }
+image = { version = "0.25.5", features = ["jpeg"] }
 indicatif = "0.17.9"
+rfd = "0.15.2"
 
 # [profile.release]
 # debug = true
