--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,7 @@ anyhow = "1.0.95"
 dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
 eframe = "0.30.0"
 egui = "0.30.0"
-egui_extras = { version = "0.30.0", features = ["image"] }
-image = { version = "0.25.5", features = ["jpeg"] }
+image = "0.25.5"
 rfd = "0.15.2"
 
 # [profile.release]
