--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.95"
 dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
-eframe = "0.30.0"
+eframe = { version = "0.30.0", features = ["persistence"] }
 egui = "0.30.0"
 image = "0.25.5"
 rfd = "0.15.2"
+serde_json = "1.0.138"
 
 # [profile.release]
 # debug = true
